<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusedByDefault="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_emptystate"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_empty_state"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/empty_list"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/guideline1"
                    app:layout_constraintVertical_bias="0.0" />
                <TextView
                    android:id="@+id/tvempty_state"
                    android:text="@string/nodata"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintGuide_percent=".7"
                    android:orientation="horizontal"/>
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintGuide_percent=".1"
                    android:orientation="horizontal"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_what_to_eat"
                android:text="@string/what_to_eat"
                android:textSize="14dp"
                android:onClick="clicked"
                android:fontFamily="casual"
                android:textColor="@android:color/black"
                android:drawableRight="@drawable/ic_notifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="12dp"
                android:background="@drawable/rounded_corner_bg"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/et_search"
                android:focusedByDefault="false"
                android:focusableInTouchMode="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_bg"
                android:drawableLeft="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_filter_list"
                android:padding="12dp"
                android:textSize="12dp"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_what_to_eat"
                android:hint="@string/enter_name"/>
            <TextView
                android:id="@+id/tv_updateLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:padding="8dp"
                android:text="@string/popular_restro"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_search" />
            <Spinner
                android:id="@+id/loc_spinner"
                tools:listitem="@layout/row_item_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_updateLocation"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/tv_nearby"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:padding="8dp"
                android:text="@string/all_restro"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loc_spinner"/>
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/srl_dashboard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_nearby"
                app:layout_constraintBottom_toBottomOf="parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_allrestro_list"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/pb_progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/foody_msg"
                android:visibility="gone"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="casual"
                android:textSize="12dp"
                android:textStyle="italic"
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pb_progress"
                android:layout_marginTop="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
